--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
   </header>
   <!---main--->
   <main>
-    <h1 class="titulo_bienvenida animate__animated animate__zoomIn d-flex justify-content-center text-center">Bienvenidos a
+    <h1 class="titulo_bienvenida animate__animated animate__zoomIn d-flex justify-content-center text-center">
+      Bienvenidos a
       indumetaria Los2Primos</h1>
     <section>
       <div class="container-fluid">
@@ -140,17 +141,20 @@
   <footer>
     <div class="container-fluid">
       <div class="row ">
-        <div class=" col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center align-items-center">
+        <div
+          class=" col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center align-items-center">
           <a href="https://www.instagram.com/los_2_primos2/"><i class="fa-brands fa-instagram"></i></a>
         </div>
-        <div class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center align-items-center">
+        <div
+          class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center align-items-center">
           <a href="https://www.facebook.com/profile.php?id=100086224144834"><i class="fa-brands fa-facebook"></i></a>
         </div>
-        <div class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center align-items-center">
-        <a href="https://web.whatsapp.com/"><i class="fa-brands fa-whatsapp"></i></a>
+        <div
+          class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center align-items-center">
+          <a href="https://web.whatsapp.com/"><i class="fa-brands fa-whatsapp"></i></a>
         </div>
       </div>
-     
+
     </div>
   </footer>
   <!---script bootstrap--->
