--- a/pages/niñas.html
+++ b/pages/niñas.html
@@ -1,113 +1,136 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <!---titulo--->
- <title>Los2Primos - Niñas</title>
- <meta name="description" content="Encontra lo mejor en moda para ellas">
-    <meta name="keywords" content="ropa,ropa para chicas,moda,remeras,polleras,camperas">
-    <!---css--->
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!---titulo--->
+  <title>Los2Primos - Niñas</title>
+  <meta name="description" content="Encontra lo mejor en moda para ellas">
+  <meta name="keywords" content="ropa,ropa para chicas,moda,remeras,polleras,camperas">
+  <!---css--->
   <link rel="stylesheet" href="../scss/estilos.css">
   <!---script iconos--->
-    <script src="https://kit.fontawesome.com/dddf0fd13e.js" crossorigin="anonymous"></script>
-    <!---aos--->
- <link
- rel="stylesheet"
- href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.compat.css"
-/>
- <link rel="stylesheet"  href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
-<!---bootstrap--->
- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+  <script src="https://kit.fontawesome.com/dddf0fd13e.js" crossorigin="anonymous"></script>
+  <!---aos--->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.compat.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+  <!---bootstrap--->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 </head>
 <!---body--->
+
 <body class="bniñas overflow-auto">
   <header>
-  <nav class=" navbar navbar-expand-lg bg-light animate__animated animate__fadeInDownBig ">
-    <div class="container-fluid d-flex flex-column justify-content-center aligin-items-center w-100 ">
-      <a class="navbar-brand" href="../index.html">Los2Primos</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active" href="../pages/niñas.html">Niñas</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active" href="../pages/niños.html">Niños<a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active" href="../pages/nosotros.html">Nosotros</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active" href="../pages/contacto.html">Contacto<a>
-          </li>
-         
-        </ul>
-      </div>
-    </div>
-  </nav>
-</header>
-<!---main--->
-<main>
-  <h1 class="text-center titulo_ellas">Pensado para <span style="color: purple ">ellas</span></h1>
-  <section class="container-fluid ">
-  <p class="text-center mt-2 fs-3">Camperas</p>
-   <div class="row animate__animated animate__bounceInRight">
-     <div class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center "><img src="../imagenes/campera_nena1.webp" class="img_niñex rounded float-start" alt="campera para niñas" width="350px" height="200px">
-     </div>
-     <div class=" col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center  "><img src="../imagenes/campera_nena2.webp" class="img_niñex rounded mx-auto d-block" alt="campera para niñas" width="350px" height="200px">
-     </div>
-     <div class=" col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center "><img src="../imagenes/campera_nena4.webp" class="img_niñex rounded float-end" alt="campera para niñas" width="350px" height="200px">
-     </div>
-   </section>
-     <section class="container-fluid">
-       <p class="text-center mt-2 fs-3">Remeras</p>
-     <div class="row  animate__animated animate__bounceInLeft>
-       <div class=" col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center"><img src="../imagenes/remeragirld.jpg1.webp" class=" img_niñex rounded float-start" alt="remeras para niñas" width="350px" height="200px">
-       </div>
-       <div class=" col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center"><img src="../imagenes/remeragirld.jpg2.webp" class=" img_niñex rounded mx-auto d-block" alt="remeras para niñas" width="350px" height="200px">
-       </div>
-       <div class=" col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center"><img src="../imagenes/remeragirld.jpg5.webp" class=" img_niñex rounded float-end" alt="remeras para niñas" width="350px" height="200px">
-       </div>
-   </section>
-   <section class="container-fluid ">
-     <p class="text-center mt-2 fs-3">Pantalones</p>
-     <div class="row animate__animated animate__bounceInRight ">
-       <div class= "col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center"><img src="../imagenes/pantalon_nena1.webp" class="img_niñex rounded float-start  " alt="pantalon para niñas" width="350px" height="200px">
-   </div>
-       <div class=" col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center"><img src="../imagenes/pantalon_nena2.webp" class=" img_niñex rounded mx-auto d-block " alt="pantalon para niñas" width="350px" height="200px">
-       </div>
-       <div class=" col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center"><img src="../imagenes/pantalon_nena4.webp" class="img_niñex rounded float-end " alt="pantalon para niñas" width="350px" height="200px">
-       </div>
-   </div>
-</section>
-</main>
-    <!---pie--->
-    <footer class="d-flex align-items-end">
-      <div class="container-fluid">
-        <div class="row ">
-          <div class=" col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center align-items-center">
-            <a href="https://www.instagram.com/los_2_primos2/"><i class="fa-brands fa-instagram"></i></a>
-          </div>
-          <div class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center align-items-center">
-            <a href="https://www.facebook.com/profile.php?id=100086224144834"><i class="fa-brands fa-facebook"></i></a>
-          </div>
-          <div class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center align-items-center">
-          <a href="https://web.whatsapp.com/"><i class="fa-brands fa-whatsapp"></i></a>
-          </div>
-        </div>
-       
-      </div>
-   </footer>
-  <!---script bootstrap--->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
-  </body>
-  </html>
-  
+    <nav class=" navbar navbar-expand-lg bg-light animate__animated animate__fadeInDownBig ">
+      <div class="container-fluid d-flex flex-column justify-content-center aligin-items-center w-100 ">
+        <a class="navbar-brand" href="../index.html">Los2Primos</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="../pages/niñas.html">Niñas</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="../pages/niños.html">Niños<a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="../pages/nosotros.html">Nosotros</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="../pages/contacto.html">Contacto<a>
+            </li>
 
+          </ul>
+        </div>
+      </div>
+    </nav>
+  </header>
+  <!---main--->
+  <main>
+    <h1 class="text-center titulo_ellas">Pensado para <span style="color: purple ">ellas</span></h1>
+    <section class="container-fluid ">
+      <p class="text-center mt-2 fs-3">Camperas</p>
+      <div class="row ">
+        <div class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center "><img
+            src="../imagenes/campera_nena1.webp" class="img_niñex rounded float-start" alt="campera para niñas"
+            width="350px" height="200px">
+        </div>
+        <div class=" col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center  "><img
+            src="../imagenes/campera_nena2.webp" class="img_niñex rounded mx-auto d-block" alt="campera para niñas"
+            width="350px" height="200px">
+        </div>
+        <div class=" col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center "><img
+            src="../imagenes/campera_nena4.webp" class="img_niñex rounded float-end" alt="campera para niñas"
+            width="350px" height="200px">
+        </div>
+    </section>
+    <section class="container-fluid">
+      <p class="text-center mt-2 fs-3">Remeras</p>
+      <div class="row">
+        <div class=" col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center"><img
+            src="../imagenes/remeragirld.jpg1.webp" class=" img_niñex rounded float-start" alt="remeras para niñas"
+            width="350px" height="200px">
+        </div>
+        <div class=" col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center"><img
+            src="../imagenes/remeragirld.jpg2.webp" class=" img_niñex rounded mx-auto d-block" alt="remeras para niñas"
+            width="350px" height="200px">
+        </div>
+        <div class=" col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center"><img
+            src="../imagenes/remeragirld.jpg5.webp" class=" img_niñex rounded float-end" alt="remeras para niñas"
+            width="350px" height="200px">
+        </div>
+    </section>
+    <section class="container-fluid ">
+      <p class="text-center mt-2 fs-3">Pantalones</p>
+      <div class="row ">
+        <div class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center"><img
+            src="../imagenes/pantalon_nena1.webp" class="img_niñex rounded float-start  " alt="pantalon para niñas"
+            width="350px" height="200px">
+        </div>
+        <div class=" col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center"><img
+            src="../imagenes/pantalon_nena2.webp" class=" img_niñex rounded mx-auto d-block " alt="pantalon para niñas"
+            width="350px" height="200px">
+        </div>
+        <div class=" col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center"><img
+            src="../imagenes/pantalon_nena4.webp" class="img_niñex rounded float-end " alt="pantalon para niñas"
+            width="350px" height="200px">
+        </div>
+      </div>
+    </section>
+  </main>
+  <!---pie--->
+  <footer>
+    <div class="container-fluid">
+      <div class="row ">
+        <div
+          class=" col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center align-items-center">
+          <a href="https://www.instagram.com/los_2_primos2/"><i class="fa-brands fa-instagram"></i></a>
+        </div>
+        <div
+          class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center align-items-center">
+          <a href="https://www.facebook.com/profile.php?id=100086224144834"><i class="fa-brands fa-facebook"></i></a>
+        </div>
+        <div
+          class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center align-items-center">
+          <a href="https://web.whatsapp.com/"><i class="fa-brands fa-whatsapp"></i></a>
+        </div>
+      </div>
+
+    </div>
+  </footer>
+  <!---script bootstrap--->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+    crossorigin="anonymous"></script>
+</body>
+
+</html>
