--- a/pages/niños.html
+++ b/pages/niños.html
@@ -1,107 +1,142 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <!---titulo--->
- <title>Los2Primos - Niños</title>
- <meta name="description" content="Encontra la ropa mas canchera para niños">
-    <meta name="keywords" content="ropa,niños,niñas,moda,calidad,indumentaria">
-      <!---css--->
-      <link rel="stylesheet" href="../scss/estilos.css">
-      <!---iconos--->
-    <script src="https://kit.fontawesome.com/dddf0fd13e.js" crossorigin="anonymous"></script>
- <!---bootstrap--->
- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
- <!---aos--->
- <link
- rel="stylesheet"
- href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
- /> 
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!---titulo--->
+  <title>Los2Primos - Niños</title>
+  <meta name="description" content="Encontra la ropa mas canchera para niños">
+  <meta name="keywords" content="ropa,niños,niñas,moda,calidad,indumentaria">
+  <!---css--->
+  <link rel="stylesheet" href="../scss/estilos.css">
+  <!---iconos--->
+  <script src="https://kit.fontawesome.com/dddf0fd13e.js" crossorigin="anonymous"></script>
+  <!---bootstrap--->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+  <!---aos--->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 </head>
 <!---body--->
+
 <body class="bniños overflow-auto">
   <header>
-  <nav class="  navbar navbar-expand-lg bg-light d-flex aligin-items-center justify-content-center animate__animated animate__fadeInDownBig">
-    <div class="container-fluid d-flex flex-column justify-content-center aligin-items-center ">
-      <a class="navbar-brand" href="../index.html">Los2Primos</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active" href="../pages/niñas.html">Niñas</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active" href="../pages/niños.html">Niños<a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active" href="../pages/nosotros.html">Nosotros</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active" href="../pages/contacto.html">Contacto<a>
-          </li>
-         
-        </ul>
+    <nav
+      class="  navbar navbar-expand-lg bg-light d-flex aligin-items-center justify-content-center animate__animated animate__fadeInDownBig">
+      <div class="container-fluid d-flex flex-column justify-content-center aligin-items-center ">
+        <a class="navbar-brand" href="../index.html">Los2Primos</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="../pages/niñas.html">Niñas</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="../pages/niños.html">Niños<a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="../pages/nosotros.html">Nosotros</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="../pages/contacto.html">Contacto<a>
+            </li>
+
+          </ul>
+        </div>
       </div>
-    </div>
-  </nav>
-</header>
-<h1 class="text-center titulo_niños">Pensado para <span style="color: red ">ellos</span></h1>
+    </nav>
+  </header>
+  <h1 class="text-center titulo_niños">Pensado para <span style="color: red ">ellos</span></h1>
   <section class="container-fluid d-flex flex-column justify-content-center aligin-items-center">
     <p class="d-flex justify-content-center aligin-items-center mt-2 fs-3">Camperas</p>
-    <div class="row w-100  mx-auto animate__animated animate__bounceInRight">
-      <div class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center aligin-items-center mx-auto"><img src="../imagenes/camp.webp" class="img_niñex rounded float-start" alt="campera para niños" width="350px" height="200px">
+    <div class="row w-100  mx-auto ">
+      <div
+        class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center aligin-items-center mx-auto">
+        <img src="../imagenes/camp.webp" class="img_niñex rounded float-start" alt="campera para niños" width="350px"
+          height="200px">
       </div>
-      <div class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center aligin-items-center mx-auto"><img src="../imagenes/camp4.webp" class=" img_niñex rounded mx-auto d-block" alt="campera para niños" width="350px" height="200px">
+      <div
+        class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center aligin-items-center mx-auto">
+        <img src="../imagenes/camp4.webp" class=" img_niñex rounded mx-auto d-block" alt="campera para niños"
+          width="350px" height="200px">
       </div>
-      <div class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center aligin-items-center mx-auto"><img src="../imagenes/camp3.webp" class=" img_niñex rounded float-end" alt="campera para niños" width="350px" height="200px">
+      <div
+        class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center aligin-items-center mx-auto">
+        <img src="../imagenes/camp3.webp" class=" img_niñex rounded float-end" alt="campera para niños" width="350px"
+          height="200px">
       </div>
-    </section>
-      <section class="container-fluid d-flex flex-column justify-content-center aligin-items-center">
-        <p class="d-flex justify-content-center aligin-items-center mt-2 fs-3">Remeras</p>
-      <div class="row w-100  mx-auto animate__animated animate__bounceInLeft ">
-        <div class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center aligin-items-center mx-auto"><img src="../imagenes/boy.jpg" class=" img_niñex rounded float-start" alt="remera para niños" width="350px" height="200px">
-        </div>
-        <div class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center aligin-items-center mx-auto"><img src="../imagenes/boy2.webp" class= "img_niñex rounded mx-auto d-block" alt="remera para niños" width="350px" height="200px">
-        </div>
-        <div class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center aligin-items-center mx-auto"><img src="../imagenes/boy3.jpg" class=" img_niñex rounded float-end" alt="remera para niños" width="350px" height="200px">
-        </div>
-    </section>
-    <section class="container-fluid d-flex flex-column justify-content-center aligin-items-center ">
-      <p class="d-flex justify-content-center aligin-items-center mt-2 fs-3">Pantalones</p>
-      <div class="row w-100  mx-auto animate__animated animate__bounceInRight">
-        <div class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center aligin-items-center mx-auto"><img src="../imagenes/pantalon.webp" class=" img_niñex rounded float-start" alt="pantalon para niños" width="350px" height="200px">
+  </section>
+  <section class="container-fluid d-flex flex-column justify-content-center aligin-items-center">
+    <p class="d-flex justify-content-center aligin-items-center mt-2 fs-3">Remeras</p>
+    <div class="row w-100  mx-auto  ">
+      <div
+        class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center aligin-items-center mx-auto">
+        <img src="../imagenes/boy.jpg" class=" img_niñex rounded float-start" alt="remera para niños" width="350px"
+          height="200px">
+      </div>
+      <div
+        class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center aligin-items-center mx-auto">
+        <img src="../imagenes/boy2.webp" class="img_niñex rounded mx-auto d-block" alt="remera para niños" width="350px"
+          height="200px">
+      </div>
+      <div
+        class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center aligin-items-center mx-auto">
+        <img src="../imagenes/boy3.jpg" class=" img_niñex rounded float-end" alt="remera para niños" width="350px"
+          height="200px">
+      </div>
+  </section>
+  <section class="container-fluid d-flex flex-column justify-content-center aligin-items-center ">
+    <p class="d-flex justify-content-center aligin-items-center mt-2 fs-3">Pantalones</p>
+    <div class="row w-100  mx-auto ">
+      <div
+        class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center aligin-items-center mx-auto">
+        <img src="../imagenes/pantalon.webp" class=" img_niñex rounded float-start" alt="pantalon para niños"
+          width="350px" height="200px">
+      </div>
+      <div
+        class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center aligin-items-center mx-auto">
+        <img src="../imagenes/pantalon2.webp" class=" img_niñex rounded mx-auto d-block" alt="pantalon para niños"
+          width="350px" height="200px">
+      </div>
+      <div
+        class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center aligin-items-center mx-auto">
+        <img src="../imagenes/pantalon4.webp" class=" img_niñex rounded float-end" alt="pantalon para niños"
+          width="350px" height="200px">
+      </div>
     </div>
-        <div class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center aligin-items-center mx-auto"><img src="../imagenes/pantalon2.webp" class=" img_niñex rounded mx-auto d-block" alt="pantalon para niños" width="350px" height="200px">
+  </section>
+  <!---pie--->
+  <footer>
+    <div class="container-fluid">
+      <div class="row ">
+        <div
+          class=" col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center align-items-center">
+          <a href="https://www.instagram.com/los_2_primos2/"><i class="fa-brands fa-instagram"></i></a>
         </div>
-        <div class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center aligin-items-center mx-auto"><img src="../imagenes/pantalon4.webp" class=" img_niñex rounded float-end" alt="pantalon para niños" width="350px" height="200px">
+        <div
+          class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center align-items-center">
+          <a href="https://www.facebook.com/profile.php?id=100086224144834"><i class="fa-brands fa-facebook"></i></a>
         </div>
-    </div>
-    </section>
-    <!---pie--->
-    <footer>
-      <div class="container-fluid">
-        <div class="row ">
-          <div class=" col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center align-items-center">
-            <a href="https://www.instagram.com/los_2_primos2/"><i class="fa-brands fa-instagram"></i></a>
-          </div>
-          <div class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center align-items-center">
-            <a href="https://www.facebook.com/profile.php?id=100086224144834"><i class="fa-brands fa-facebook"></i></a>
-          </div>
-          <div class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center align-items-center">
+        <div
+          class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center align-items-center">
           <a href="https://web.whatsapp.com/"><i class="fa-brands fa-whatsapp"></i></a>
-          </div>
         </div>
-       
       </div>
-   </footer>
-<!---script bootstrap--->
-   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+
+    </div>
+  </footer>
+  <!---script bootstrap--->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+    crossorigin="anonymous"></script>
 </body>
+
 </html>
