--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 <!---body--->
 
-<body class="bindex">
+<body class="bindex mv-100 overflow-auto">
   <header>
     <nav class=" navbar navbar-expand-lg bg-light animate__animated animate__fadeInDownBig">
       <div class="container-fluid d-flex flex-column justify-content-center align-items-center w-100">
