--- a/index.html
+++ b/index.html
@@ -60,42 +60,42 @@
 
     <div class="row ">
       <div class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center ">
-        <img src="./imagenes/camp.jpg"  class="img_niñex rounded float-start mw-100 rounded" alt="campera para niñas">
+        <img src="./imagenes/campera_nena1.jpg"  class="img_niñex rounded float-start mw-100 rounded" alt="campera para niñas">
       </div>
       <div class=" col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center  "><img
-          src="./imagenes/camp.jpg" class="img_niñex rounded mx-auto d-block mw-100 rounded" alt="campera para niñas">
+          src="./imagenes/boy (1).jpg" class="img_niñex rounded mx-auto d-block mw-100 rounded" alt="remera para niños">
       </div>
       <div class=" col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center "><img
-          src="./imagenes/boy (1).jpg" class="img_niñex rounded float-end mw-100 rounded" alt="campera para niñas">
+          src="./imagenes/pantalon_nena2.jpg" class="img_niñex rounded float-end mw-100 rounded" alt="pantalon para niñas">
       </div>
   </section>
   <section class="container-fluid">
     
     <div class="row">
       <div class=" col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center"><img
-          src="./imagenes/boy3.jpg" class=" img_niñex rounded float-start mw-100 rounded" alt="remeras para niñas">
+          src="./imagenes/pantalon2.jpg" class=" img_niñex rounded float-start mw-100 rounded" alt="pantalon para niñas">
       </div>
       <div class=" col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center"><img
-          src="./imagenes/boy (1).jpg" class=" img_niñex rounded mx-auto d-block mw-100 rounded "
-          alt="remeras para niñas">
+          src="./imagenes/campera_nena2.jpg" class=" img_niñex rounded mx-auto d-block mw-100 rounded "
+          alt="campera para niñas">
       </div>
       <div class=" col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center"><img
-          src="./imagenes/boy4.jpg" class=" img_niñex rounded float-end mw-100 rounded " alt="remeras para niñas">
+          src="./imagenes/boy3.jpg" class=" img_niñex rounded float-end mw-100 rounded " alt="remeras para niños">
       </div>
   </section>
   <section class="container-fluid ">
  
     <div class="row ">
       <div class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center"><img
-          src="./imagenes/pantalon4.jpg" class="img_niñex rounded float-start rounded mw-100 rounded   "
-          alt="pantalon para niñas">
+          src="./imagenes/remeragirld.jpg" class="img_niñex rounded float-start rounded mw-100 rounded   "
+          alt="remera para niñas">
       </div>
       <div class=" col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center"><img
           src="./imagenes/pantalon3.jpg" class=" img_niñex rounded mx-auto d-block rounded mw-100 rounded "
-          alt="pantalon para niñas">
+          alt="pantalon para niños">
       </div>
       <div class=" col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center"><img
-          src="./imagenes/pantalon2.jpg" class="img_niñex rounded float-end  mw-100 rounded" alt="pantalon para niñas">
+          src="./imagenes/campera_nena3.jpg" class="img_niñex rounded float-end  mw-100 rounded" alt="campera para niñas">
       </div>
     </div>
   </section>
